k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../compose.yml
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-gateway
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../compose.yml
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: api-gateway
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  io.kompose.service: db
              topologyKey: "kubernetes.io/hostname"
      containers:
        - image: ghcr.io/aet-devops25/aifm/api-gateway:latest
          imagePullPolicy: Always
          name: api-gateway
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
