k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../compose.yml
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    app: client
  name: client
  namespace: aifm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../compose.yml
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        app: client
    spec:
      containers:
        - image: ghcr.io/aet-devops25/aifm/client:latest
          imagePullPolicy: Always
          name: client
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
