k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../compose.yml
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../compose.yml
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: grafana
    spec:
      containers:
        - env:
            - name: GF_LOG_LEVEL
              value: warn
            - name: GF_USERS_DEFAULT_THEME
              value: light
          image: grafana/grafana-oss
          imagePullPolicy: Always
          name: grafana
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/grafana/dashboards/DevOps
              name: grafana-dashboard
            - mountPath: /etc/grafana/provisioning
              name: grafana-provisioning
      restartPolicy: Always
      volumes:
        - name: grafana-dashboard
          persistentVolumeClaim:
            claimName: grafana-dashboard
        - name: grafana-provisioning
          persistentVolumeClaim:
            claimName: grafana-provisioning
