k8s/playlist-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../compose.yml
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: playlist-service
  name: playlist-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: playlist-service
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../compose.yml
        kompose.version: 1.36.0 (ae2a39403)
      labels:
        io.kompose.service: playlist-service
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  io.kompose.service: db
              topologyKey: "kubernetes.io/hostname"
      containers:
        - env:
            - name: ANNOUNCEMENT_SERVICE_URL
              value: http://announcement-service:8080/announcement
            - name: AUDIO_FILE_PATH
              value: /audio
            - name: SPRING_DATABASE_PASSWORD
              value: root
            - name: SPRING_DATABASE_URL
              value: jdbc:mysql://db:3306/audioDB
            - name: SPRING_DATABASE_USERNAME
              value: root
          image: ghcr.io/aet-devops25/aifm/playlist-service:latest
          imagePullPolicy: Always
          name: playlist-service
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /audio
              name: audio-files
      restartPolicy: Always
      volumes:
        - name: audio-files
          persistentVolumeClaim:
            claimName: audio-files
