k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../compose.yml
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    io.kompose.service: client
  name: client
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    io.kompose.service: client
