k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    io.kompose.service: db  # <- Optional, but useful for grouping
spec:
  selector:
    io.kompose.service: db  # <- Required for routing
  ports:
    - port: 3306
      targetPort: 3306
