k8s/playlist-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../compose.yml
    kompose.version: 1.36.0 (ae2a39403)
  labels:
    app: playlist-service
  name: playlist-service
  namespace: aifm
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: playlist-service
